# kvasir_edgy_blinky_example

./: .gitmodules  CMakeLists.txt  README.md
src/: ApplicationConfig.hpp  HWConfig.hpp  main.cpp
